Enabled stylesheet entry sorting when generating HTML for HEAD section. Now it should use priority. Modified gallery widget template to use DIV instead of UL and LI since it caused glitches in some cases when gallery is inserted into content area. Modified gallery widget styles to use dark style as default so it would be easier to override them if widget's style is not specified while rendering. Fixed bug in gallery widget with preview image not showing up when startIndex parameter is invalid. Added a jQuery event to gallery widget (pc.widgets.gallery.imagechanged) that is triggered on root gallery element when image changes.

--- a/media/widgets/gallery/css/gallery.css
+++ b/media/widgets/gallery/css/gallery.css
@@ -18,12 +18,12 @@
 	user-select: none;
 }
 
-.pc_gallery_light {
-	background-color: #FFFFFF;
-}
-
 .pc_gallery_dark {
 	background-color: #404040;
+}
+
+.pc_gallery_light {
+	background-color: #FFFFFF;
 }
 
 .pc_gallery_preview_wrap {
@@ -97,7 +97,7 @@
 	transition: left 0.2s ease, top 0.2s ease;
 }
 
-.pc_gallery_thumbs ul {
+.pc_gallery_thumbs_cont {
 	position: relative;
 	display: block;
 	margin: 0;
@@ -108,13 +108,13 @@
 	margin-left: -5px;
 }
 
-.pc_gallery_thumbs li,
+.pc_gallery_thumb,
 .pc_gallery_thumb_highlighter_wrap {
 	width: 120px;
 	height: 90px;
 }
 
-.pc_gallery_thumbs li {
+.pc_gallery_thumb {
 	display: inline-block;
 	margin: 0 0 0 5px;
 	padding: 0;
@@ -154,11 +154,11 @@
 	top: 0;
 	right: 0;
 	bottom: 0;
-	border: 3px solid #C0C0C0;
+	border: 3px solid #FFFFFF;
 }
 
-.pc_gallery_dark .pc_gallery_thumb_highlighter {
-	border: 3px solid #FFFFFF;
+.pc_gallery_light .pc_gallery_thumb_highlighter {
+	border: 3px solid #C0C0C0;
 }
 
 .pc_gallery_thumbs_left,
@@ -191,11 +191,11 @@
 	top: 10px;
 	width: 50px;
 	height: 50px;
-	background-image: url(../img/zoom-light.png);
+	background-image: url(../img/zoom-dark.png);
 }
 
-.pc_gallery_dark .pc_gallery_preview_zoom {
-	background-image: url(../img/zoom-dark.png);
+.pc_gallery_light .pc_gallery_preview_zoom {
+	background-image: url(../img/zoom-light.png);
 }
 
 .pc_gallery_thumbs_left,
@@ -215,31 +215,31 @@
 .pc_gallery_thumbs_left,
 .pc_gallery_preview_left {
 	left: 5px;
-	background-image: url(../img/arrow-left-light.png);
+	background-image: url(../img/arrow-left-dark.png);
 }
 
 .pc_gallery_preview_left {
 	left: 10px;
 }
 
-.pc_gallery_dark .pc_gallery_thumbs_left,
-.pc_gallery_dark .pc_gallery_preview_left {
-	background-image: url(../img/arrow-left-dark.png);
+.pc_gallery_light .pc_gallery_thumbs_left,
+.pc_gallery_light .pc_gallery_preview_left {
+	background-image: url(../img/arrow-left-light.png);
 }
 
 .pc_gallery_thumbs_right,
 .pc_gallery_preview_right {
 	right: 5px;
-	background-image: url(../img/arrow-right-light.png);
+	background-image: url(../img/arrow-right-dark.png);
 }
 
 .pc_gallery_preview_right {
 	right: 10px;
 }
 
-.pc_gallery_dark .pc_gallery_thumbs_right,
-.pc_gallery_dark .pc_gallery_preview_right {
-	background-image: url(../img/arrow-right-dark.png);
+.pc_gallery_light .pc_gallery_thumbs_right,
+.pc_gallery_light .pc_gallery_preview_right {
+	background-image: url(../img/arrow-right-light.png);
 }
 
 
